# MapCoreHackathon

./: .gitignore  README.md  rag_cache.json
Data/Examples/Android/McAndroidTester/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
Data/Examples/Android/McAndroidTester/app/: build.gradle  proguard-rules.pro
Data/Examples/Android/McAndroidTester/app/src/main/: AndroidManifest.xml
Data/Examples/Android/McAndroidTester/multi-level-listview/: build.gradle
Data/Examples/Android/McAndroidTester/multi-level-listview/src/main/: AndroidManifest.xml
Data/Examples/Android/McAndroidTester/print/: build.gradle
Data/Examples/Android/McAndroidTester/print/src/main/: AndroidManifest.xml
Data/Examples/CPP-MFC/: CMakeLists.txt  ChildView.cpp  ChildView.h  MainFrm.cpp  MapCoreCppExample.cpp  MapCoreCppExample.h  MapCoreCppExample.rc  ReadMe.txt  Resource.h  resources.cfg  stdafx.cpp
Data/Examples/CPP-MFC/res/: MapCoreCppExample.rc2
Data/Examples/MsoPluginTester/: CMakeLists.txt  DbConnectionParams.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  ShowCoords.Designer.cs  ShowCoords.cs
Data/Examples/MsoPluginTester/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Data/Examples/WPF/: .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  resources.cfg
Data/Examples/WPF/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Data/Examples/Web/web-server/: .env  .gitignore  CMakeLists.txt  chromeWithoutCors.exe.lnk  config-overrides.js  gis-ui-components-licenses.csv  package-lock.json  package.json  server_build.bat  server_start.bat  wasm_config.json  wasm_config.sh
Data/Examples/Web/web-server/public/: dictionary.json  index.html
Data/Examples/Web/web-server/scripts/: smart_install.js
Data/Examples/Web/web-server/src/: App.js  App.module.css  config.js  errorHandler.js  index.css  index.js  setupProxy.js.currentNotInUse  setupProxy.js.notInUse
Data/Examples/Web/web-server/src/components/Checkbox/: Checkbox.js  Checkbox.module.css
Data/Examples/Web/web-server/src/components/Clock/: Clock.js
Data/Examples/Web/web-server/src/components/ContextMenu/: ContextMenu.js  ContextMenu.module.css
Data/Examples/Web/web-server/src/components/Forms/: index.js
Data/Examples/Web/web-server/src/components/Input/: Input.js  Input.module.css
Data/Examples/Web/web-server/src/components/InputColor/: InputColor.js  InputColor.module.css
Data/Examples/Web/web-server/src/components/MapContainer/: MapContainer.js  MapContainer1.js
Data/Examples/Web/web-server/src/components/MapPreviewActions/: Action.js  MapPreviewActions.js  MapPreviewActions.module.css
Data/Examples/Web/web-server/src/components/MapRepositoryTree/: MapRepositoryTree.js  MapRepositoryTree.module.css
Data/Examples/Web/web-server/src/components/MultipleSelect/: Dropdown.js  Dropdown.js.initial  DropdownMultiple.js
Data/Examples/Web/web-server/src/components/Popup/: Popup.js  Popup.module.css
Data/Examples/Web/web-server/src/components/Progress/: Progress.js  Progress.module.css
Data/Examples/Web/web-server/src/components/RunningProcesses/: RunningProcesses.js  RunningProcesses.module.css
Data/Examples/Web/web-server/src/components/RunningProcessesAdmin/: RunningProcessesAdmin.js  RunningProcessesAdmin.module.css
Data/Examples/Web/web-server/src/components/Select/: Select.js  Select.module.css
Data/Examples/Web/web-server/src/components/SelectButton/: SelectButton.js  SelectButton.module.css
Data/Examples/Web/web-server/src/components/SideNtification/: SideNotification.js  SideNotification.module.css
Data/Examples/Web/web-server/src/components/Table/: table.js  table.module.css
Data/Examples/Web/web-server/src/components/Tooltip/: Tooltip.js  Tooltip.module.css
Data/Examples/Web/web-server/src/components/TreeNode/: TreeNode.js  TreeNode.module.css
Data/Examples/Web/web-server/src/context/: ApplicationState.js  applicationContext.js
Data/Examples/Web/web-server/src/mock-data/: mock-data.js
Data/Examples/Web/web-server/src/redux/: actionTypes.ts  combineReducer.ts
Data/Examples/Web/web-server/src/redux/MapContainer/: MapContainerAction.ts  MapContainerReducer.ts
Data/Examples/Web/web-tester/: .env  .env.production  .gitignore  CMakeLists.txt  CreateReferenceImg_Web.cmd  config-overrides.js  package-lock.json  package.json  tsconfig.json  wasm_config.bat  wasm_config.json
Data/Examples/Web/web-tester/public/: PostInstallNodeServer.txt  RunNodeServer.bat  index.html
Data/Examples/Web/web-tester/public/ObjectWorld/schemes/: EllipseSchemeGPU.mcsch  EllipseSchemeGPU2.mcsch
Data/Examples/Web/web-tester/scripts/: smart_install.js
Data/Examples/Web/web-tester/src/: App.tsx  index.tsx
Data/Examples/Web/web-tester/src/components/dialog/: dialog.tsx  footerDialog.tsx  headerDialog.tsx
Data/Examples/Web/web-tester/src/components/shared/: colorPicker.tsx  inputMaxNumber.tsx  threeStateCheckbox.tsx
Data/Examples/Web/web-tester/src/propertiesBase/: ObjectWorldTreePropertiesBase.ts  editModePropertiesBase.ts  layerPropertiesBase.ts  mapCorePropertiesBase.ts  objectPropertiesBase.ts  texturePropertiesBase.ts
Data/Examples/Web/web-tester/src/redux/: actionTypes.ts  combineReducer.ts  middlewares.tsx  store.ts
Data/Examples/Web/web-tester/src/redux/EditMode/: editModeAction.ts  editModeReducer.ts
Data/Examples/Web/web-tester/src/services/: addJsonViewport.service.ts  dialogStateService.ts  editModeNavigation.service.ts  general.service.ts  mapWorldTreeService.ts  objectWorldTree.service.ts  openOppositeMap.service.ts  printMap.service.ts  savedFiles.service.ts  screenPosition.service.ts  spatialQueries.service.ts  symbolicItems.service.ts  texture.service.ts  tree.service.ts
Data/Examples/Web/web-tester/src/styles/: App.css  primeReactStyles.css
Data/Examples/WinForms/: CMakeLists.txt  MapCore1.Designer.cs  MapCore1.cs  MapCore1.resx  Program.cs  plugins.cfg
Data/Examples/WinForms/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
chroma_db/: chroma.sqlite3
(+2274 files in other folders)
